--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-disqus_shortname: stackproblems
+title: My PortFolio
+description: My Personal Post
+author: kailtenexia
+github: https://github.com/kailtenexia
+about: I'm Programmer Cryptography
+disqus_shortname:  My PortFolio
 google_analytics: UA-XXXXXXXX-Y
 avatar_url: /static/img/avatar.jpg
 
@@ -25,7 +25,7 @@ social:
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/kailtenexia"
 
 share:
   twitter_username: github.io
@@ -39,7 +39,7 @@ urls:
     - text: XML Feed
       url: /feed.xml
 
-url: "https://agusmakmun.github.io"
+url: "https://kailtenexia.github.io"
 baseurl: ""
 paginate: 20
 per_page: 20
