--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ urls:
       url: /about/
     - text: My Projects
       url: /projects/
+    - text: My Post
+      url: /post/
     - text: XML Feed
       url: /feed.xml
 
