--- a/_data/myprojects.json
+++ b/_data/myprojects.json
@@ -1,40 +1,40 @@
 [
 	{
 		"slug": "Cool project",
-		"name": "Cool project 1",
+		"name": "Cool ",
 		"image": "placeholder.jpg",
 		"url": "https://www.google.com",
 		"date": "Jan 2014",
 		"tags": ["dd"]
 	},
 	{
-		"name": "Cool project 2",
+		"name": "Cool ",
 		"image": "placeholder.jpg",
 		"url": "#",
 		"date": "May 2014",
 		"tags": ["Python"]
 	},
 	{
-		"name": "Cool project 3",
+		"name": "Cool ",
 		"image": "placeholder.jpg",
 		"url": "#",
 		"date": "June 2014",
 		"tags": ["HTML"]
 	},
 	{
-		"name": "Cool project 4",
+		"name": "Cool  4",
 		"image": "placeholder.jpg",
 		"date": "Oct 2016",
 		"tags": ["Python"]
 	},
 	{
-		"name": "Cool project 5",
+		"name": "Cool 5",
 		"image": "placeholder.jpg",
 		"date": "Oct 2016",
 		"tags": ["Python"]
 	},
 	{
-		"name": "Cool project 6",
+		"name": "Cool 6",
 		"image": "placeholder.jpg",
 		"date": "Oct 2016",
 		"tags": ["Python"]
