--- a/_data/myprojects.json
+++ b/_data/myprojects.json
@@ -1,6 +1,6 @@
 [
 	{
-		"slug": "Cool project",
+		"slug": "Cool",
 		"name": "Cool ",
 		"image": "placeholder.jpg",
 		"url": "https://www.google.com",
