--- a/_data/projects.json
+++ b/_data/projects.json
@@ -12,7 +12,7 @@
 		"image": "placeholder.jpg",
 		"url": "#",
 		"date": "May 2014",
-		"tags": ["Python","Django"]
+		"tags": ["Python","Cryptography"]
 	},
 	{
 		"name": "Cool project 3",
